1.9.42
------
(RB=226303)
Add @TestMethod annotation to indicate which methods on a resource are intended to only be used for testing.

(RB=224402)
Add compatibility checking between snapshot and idl.

(RB=228981)
Fixing the onlyIf closure for Publish tasks, adding more logging to ease debugging for future.

1.9.41
------
(RB=225308)
Refactor r2 asyncpool stats to make it visible outside the package.

1.9.40
------
(RB=226611)
Fix a bug where SimpleLoadBalancerState didn't remove an old entry in cluster -> services
mapping when SimpleLoadBalancerState receive a service changes notifications from Zookeeper.
At the same time we are adding more JMX handle to load balancers to allow more control at runtime.

(RB=225607)
Fix two bugs related to snapshots:
snapshot compatibility messages during checkSnapshot task should now print correctly.
snapshots of simple resources should be generated correctly.

(RB=225673)
break up compatibility info in CompatibilityInfoMap into two maps: one for tracking info from restSpecs, the other for
tracking info from models.  Added new methods for extracting this information from the infoMap.  Old methods for getting
general data are still around.  Backwards-incompatible changes to method names for inserting info into compatibilityInfoMap.

1.9.39
------
(RB=224558)
Improving Pegasus build messages for network parallel builds. Making sure the access to static variables are synchronized.

(RB=225725)
Add additional http status codes to list.

1.9.38
------
(RB=224678)
Make d2 test artifacts visible.

1.9.37
------
(RB=222898)
added logic to prevent callDroppingMode in LBStrategy to be changed when traffic is low

(RB=221327)
Change emitted message on successful build to include a listing of all published
IDLs and snapshots that likely need to be committed.

(RB=222817)
Fixes to checkIdl task in PegausPlugin.  Some small clean-up in compatibility tasks:
Only initialize a single checker class rather than one per pair of files, and don't